<resources>
    <string name="app_name">TasEats 塔洲吃貨</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">SEARCH</string>
    <string name="action_filter">Filter</string>

    <string name="menu_category">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_shipper">Shipper</string>
    <string name="menu_best_deals">Best Deals</string>
    <string name="menu_most_popular">Most Popular</string>
    <string name="menu_send_news">Send New Shop</string>

    <string name="menu_order">Order</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="menu_sing_out">Sign Out</string>
    <string name="title_activity_tracking_order">Map</string>

    <style name="FullscreenTheme" parent="AppTheme">
        <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
        <item name="android:windowActionBarOverlay">true</item>
        <item name="android:windowBackground">@drawable/loginbg</item>
        <item name="windowActionBar">false</item>
        <item name="windowNoTitle">true</item>
        <item name="colorControlNormal">@android:color/white</item>
        <item name="colorControlActivated">@android:color/white</item>
        <item name="colorControlHighlight">@android:color/white</item>
        <item name="android:textColorPrimary">@android:color/white</item>

        <item name="android:textColorTertiary">@android:color/white</item>
    </style>

    <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
        <item name="android:background">@color/colorPrimary</item>
    </style>
</resources>
