<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_category" />
    </group>
    <group android:id="@+id/send_news">
        <item
            android:id="@+id/nav_send_news"
            android:icon="@drawable/ic_markunread_black_24dp"
            android:title="@string/menu_send_news" />
    </group>
    <group android:id="@+id/order_group">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/menu_order" />
    </group>
    <group android:id="@+id/order_best_deals">
        <item
            android:id="@+id/nav_best_deals"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_best_deals" />
    </group>
    <group android:id="@+id/order_most_popular">
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/menu_most_popular" />
    </group>

    <group android:id="@+id/order_shipper">
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_local_shipping_black1_24dp"
            android:title="@string/menu_shipper" />
    </group>


    <group android:id="@+id/sing_out">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_sing_out"/>
    </group>
</menu>
